language-server/src/tests/snapshots/gleam_language_server__tests__action__pattern_match_on_argument_generates_unique_names_even_with_labels.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type Wibble {\n  Wibble(String, string: String)\n}\n\npub fn main(wibble: Wibble) {\n  todo\n}\n"
---
----- BEFORE ACTION

pub type Wibble {
  Wibble(String, string: String)
}

pub fn main(wibble: Wibble) {
            ↑                
  todo
}


----- AFTER ACTION

pub type Wibble {
  Wibble(String, string: String)
}

pub fn main(wibble: Wibble) {
  let Wibble(string_2, string:) = wibble
  todo
}
