language-server/src/tests/snapshots/gleam_language_server__tests__action__pattern_match_on_argument_single_item_tuple.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main(tuple: #(Int)) {\n  todo\n}\n"
---
----- BEFORE ACTION

pub fn main(tuple: #(Int)) {
                 ↑          
  todo
}


----- AFTER ACTION

pub fn main(tuple: #(Int)) {
  let #(int) = tuple
  todo
}
