language-server/src/tests/snapshots/gleam_language_server__tests__action__pattern_match_on_argument_single_unlabelled_field_is_not_numbered.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type Wibble {\n  Wibble(Int)\n}\n\npub fn main(arg: Wibble) {}\n"
---
----- BEFORE ACTION

pub type Wibble {
  Wibble(Int)
}

pub fn main(arg: Wibble) {}
               ↑           


----- AFTER ACTION

pub type Wibble {
  Wibble(Int)
}

pub fn main(arg: Wibble) {
  let Wibble(int) = arg
}
