language-server/src/tests/snapshots/gleam_language_server__tests__action__pattern_match_on_argument_uses_case_with_multiple_constructors.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type CannotBeDestructured {\n  One(one: String)\n  Two(two: Int)\n}\n\npub fn main(arg: CannotBeDestructured) {\n  todo\n}\n"
---
----- BEFORE ACTION

pub type CannotBeDestructured {
  One(one: String)
  Two(two: Int)
}

pub fn main(arg: CannotBeDestructured) {
            ↑                           
  todo
}


----- AFTER ACTION

pub type CannotBeDestructured {
  One(one: String)
  Two(two: Int)
}

pub fn main(arg: CannotBeDestructured) {
  case arg {
    One(one:) -> todo
    Two(two:) -> todo
  }
  todo
}
