language-server/src/tests/snapshots/gleam_language_server__tests__action__pattern_match_on_argument_uses_label_shorthand_syntax_for_labelled_arguments.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type Wibble {\n  Wobble(Int, String, i_want_to_see_this: String, and_this: Bool)\n}\n\npub fn main(arg: Wibble) {\n  todo\n}\n"
---
----- BEFORE ACTION

pub type Wibble {
  Wobble(Int, String, i_want_to_see_this: String, and_this: Bool)
}

pub fn main(arg: Wibble) {
            ▔▔▔▔▔↑        
  todo
}


----- AFTER ACTION

pub type Wibble {
  Wobble(Int, String, i_want_to_see_this: String, and_this: Bool)
}

pub fn main(arg: Wibble) {
  let Wobble(int, string, i_want_to_see_this:, and_this:) = arg
  todo
}
