language-server/src/tests/snapshots/gleam_language_server__tests__action__pattern_match_on_argument_will_use_aliased_constructor_name.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport wibble.{Wobble as IWantToSeeThisName}\n\npub fn main(arg: wibble.Wibble) {\n  todo\n}\n"
---
----- BEFORE ACTION

import wibble.{Wobble as IWantToSeeThisName}

pub fn main(arg: wibble.Wibble) {
            ↑                    
  todo
}


----- AFTER ACTION

import wibble.{Wobble as IWantToSeeThisName}

pub fn main(arg: wibble.Wibble) {
  let IWantToSeeThisName(label:) = arg
  todo
}
