language-server/src/tests/snapshots/gleam_language_server__tests__action__pattern_match_on_argument_will_use_aliased_module_name.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport wibble as i_want_to_see_this_name\n\npub fn main(arg: i_want_to_see_this_name.Wibble) {\n  todo\n}\n"
---
----- BEFORE ACTION

import wibble as i_want_to_see_this_name

pub fn main(arg: i_want_to_see_this_name.Wibble) {
            ↑                                     
  todo
}


----- AFTER ACTION

import wibble as i_want_to_see_this_name

pub fn main(arg: i_want_to_see_this_name.Wibble) {
  let i_want_to_see_this_name.Wobble(label:) = arg
  todo
}
