language-server/src/tests/snapshots/gleam_language_server__tests__action__pattern_match_on_argument_will_use_qualified_name.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport wibble\n\npub fn main(arg: wibble.Wibble) {\n  todo\n}\n"
---
----- BEFORE ACTION

import wibble

pub fn main(arg: wibble.Wibble) {
                 ↑               
  todo
}


----- AFTER ACTION

import wibble

pub fn main(arg: wibble.Wibble) {
  let wibble.ThisShouldBeQualified(label:) = arg
  todo
}
